--- a/recipes/ChickenRiceCasserole.html
+++ b/recipes/ChickenRiceCasserole.html
@@ -2,5 +2,7 @@
 <html lang="en">
 <h1>Mamaw's Chicken and Rice Casserole</h1>
 <img src="https://www.allrecipes.com/thmb/1sS9eSOCeQvE-xT0B9cDcYUwMJk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/fileheJVCj-2000-3ad6711f063949a586ab46c1a0baa326.jpg" alt="An image of Chicken & Rice Casserole from AllRecipes.">
+<h2>Description</h2>
+<p>This is an old fashioned recipe for how to make Chicken & Rice Casserole from the good old days.</p>
 
 </html>
