--- a/recipes/ChickenRiceCasserole.html
+++ b/recipes/ChickenRiceCasserole.html
@@ -4,5 +4,16 @@
 <img src="https://www.allrecipes.com/thmb/1sS9eSOCeQvE-xT0B9cDcYUwMJk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/fileheJVCj-2000-3ad6711f063949a586ab46c1a0baa326.jpg" alt="An image of Chicken & Rice Casserole from AllRecipes.">
 <h2>Description</h2>
 <p>This is an old fashioned recipe for how to make Chicken & Rice Casserole from the good old days.</p>
-
+<h2>Ingredients:</h2>
+<ul>
+    <li>Chicken Breasts</li>
+    <ul>
+        <li>Three boneless skinless chicken breasts cut to rough cubes.</li>
+    </ul>
+    <li>Water</li>
+    <li>White Rice</li>
+    <li>Cream of Chicken, Celery, and mushroom soup</li>
+    <li>Salt, Pepper, and other seasonings to taste</li>
+    <li>Butter</li>
+</ul>
 </html>
