--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Odin Recipes</title>
+</head>
 <h1>Odin Recipes</h1>
 <a href="recipes/ChickenRiceCasserole.html">Mamaw's Chicken and Rice Casserole.</a>"
 
