Amend ingredients, add steps list.
Added more accurate ingredients list.
Added steps title and list.

--- a/recipes/ChickenRiceCasserole.html
+++ b/recipes/ChickenRiceCasserole.html
@@ -14,10 +14,13 @@
     <ul>
         <li>Three boneless skinless chicken breasts cut to rough cubes.</li>
     </ul>
-    <li>Water</li>
-    <li>White Rice</li>
-    <li>Cream of Chicken, Celery, and mushroom soup</li>
-    <li>Salt, Pepper, and other seasonings to taste</li>
-    <li>Butter</li>
+    <li>2 cups water</li>
+    <li>2 cups instant White Rice</li>
+    <li>1 can each of Cream of Chicken, Celery, and mushroom soup</li>
+    <li>salt, pepper, and other seasonings to taste</li>
+    <li>1/2 cup butter sliced to pats</li>
 </ul>
+<h2>Steps</h2>
+<ol>
+</ol>
 </html>
