Add steps to list.
Added the missing steps to the steps list.

--- a/recipes/ChickenRiceCasserole.html
+++ b/recipes/ChickenRiceCasserole.html
@@ -22,5 +22,10 @@
 </ul>
 <h2>Steps</h2>
 <ol>
+    <li>Gather and prepare all ingredients.</li>
+    <li>Preheat oven to 200C, grease sides and bottom of a casserole dish.</li>
+    <li>Stir together chicken, water, rice, and soups in prepped dish. Season with salt and pepper.</li>
+    <li>Distribute butter evenly over top.</li>
+    <li>Bake until rice is tender and chicken is cooked through. 1 hour to 1 hour 15 minutes. Cool for 10 to 15 minutes before serving.</li>
 </ol>
 </html>
