--- a/recipes/BakedZiti.html
+++ b/recipes/BakedZiti.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Mamaw's Chicken Rice Casserole</title>
+    <title>Baked Ziti</title>
 </head>
-<h1>Mamaw's Chicken and Rice Casserole</h1>
-<img src="https://www.allrecipes.com/thmb/1sS9eSOCeQvE-xT0B9cDcYUwMJk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/fileheJVCj-2000-3ad6711f063949a586ab46c1a0baa326.jpg" alt="An image of Chicken & Rice Casserole from AllRecipes.">
+<h1>Baked Ziti</h1>
+<img src="https://www.allrecipes.com/thmb/VUjF0WqLJFUQKCnOItM7mMlk-LE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4557541-21604073f2774e89b532193821d6cd9c.jpg" alt="An image of Chicken & Rice Casserole from AllRecipes.">
 <h2>Description</h2>
 <p>This is an old fashioned recipe for how to make Chicken & Rice Casserole from the good old days.</p>
 <h2>Ingredients:</h2>
