Update Steps List
Updated the steps list for the new recipe.

--- a/recipes/BakedZiti.html
+++ b/recipes/BakedZiti.html
@@ -7,25 +7,24 @@
 <h1>Baked Ziti</h1>
 <img src="https://www.allrecipes.com/thmb/VUjF0WqLJFUQKCnOItM7mMlk-LE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4557541-21604073f2774e89b532193821d6cd9c.jpg" alt="An image of Chicken & Rice Casserole from AllRecipes.">
 <h2>Description</h2>
-<p>This is an old fashioned recipe for how to make Chicken & Rice Casserole from the good old days.</p>
+<p>This is a delicious baked ziti recipe.</p>
 <h2>Ingredients:</h2>
 <ul>
-    <li>Chicken Breasts</li>
-    <ul>
-        <li>Three boneless skinless chicken breasts cut to rough cubes.</li>
-    </ul>
-    <li>2 cups water</li>
-    <li>2 cups instant White Rice</li>
-    <li>1 can each of Cream of Chicken, Celery, and mushroom soup</li>
-    <li>salt, pepper, and other seasonings to taste</li>
-    <li>1/2 cup butter sliced to pats</li>
+    <li>1lb dry ziti pasta</li>
+    <li>1 chopped onion</li>
+    <li>1lb lean ground beef</li>
+    <li>2 26 ounce jars spaghetti sauce</li>
+    <li>6 ounces sliced provolone cheese</li>
+    <li>1.5 cups sour cream</li>
+    <li>6 ounces shredded mozzarella cheese</li>
+    <li>2 tablespoons grated parmesan</li>
 </ul>
 <h2>Steps</h2>
 <ol>
-    <li>Gather and prepare all ingredients.</li>
-    <li>Preheat oven to 200C, grease sides and bottom of a casserole dish.</li>
-    <li>Stir together chicken, water, rice, and soups in prepped dish. Season with salt and pepper.</li>
-    <li>Distribute butter evenly over top.</li>
-    <li>Bake until rice is tender and chicken is cooked through. 1 hour to 1 hour 15 minutes. Cool for 10 to 15 minutes before serving.</li>
+    <li>Bring a pot of lightly salted water to boil, add pasta, cookl until al dente, approx 8 minutes, drain.</li>
+    <li>While the pasta is cooking, brown the ground beef and onion in a large skillet over medium heat. Stir in spaghetti sauce and simmer for 15 minutes.</li>
+    <li>Preheat the oven to 175C. Butter a 9x13 inch baking dish.</li>
+    <li>Spread 1/2 of the pasta in the bottom of the dish, add provolone cheese, sour cream, & half of the meat sauce. Add the remaining ziti, the mozzarella cheese, and the remaining sauce. Top with grated parmesan cheese. </li>
+    <li>Bke in the oven until heated through and cheese have melted, approximately 30 minutes.</li>
 </ol>
 </html>
