--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>Odin Recipes</title>
 </head>
 <h1>Odin Recipes</h1>
-<a href="recipes/ChickenRiceCasserole.html">Mamaw's Chicken and Rice Casserole.</a>"
+<ul>
+    <a href="recipes/ChickenRiceCasserole.html">Mamaw's Chicken and Rice Casserole.</a>"
+    <a href="recipes/BroccoliCauliflowerCasserole.html">Broccoli Cauliflower Casserole.</a>"
+    <a href="recipes/BakedZiti.html">Baked Ziti.</a>"
+</ul>
+
 
 </html>
