Update Unordered List
Corrected missing LI of unordered list.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <h1>Odin Recipes</h1>
 <ul>
-    <a href="recipes/ChickenRiceCasserole.html">Mamaw's Chicken and Rice Casserole.</a>"
-    <a href="recipes/BroccoliCauliflowerCasserole.html">Broccoli Cauliflower Casserole.</a>"
-    <a href="recipes/BakedZiti.html">Baked Ziti.</a>"
+    <li><a href="recipes/ChickenRiceCasserole.html">Mamaw's Chicken and Rice Casserole.</a></li>
+    <li><a href="recipes/BroccoliCauliflowerCasserole.html">Broccoli Cauliflower Casserole.</a></li>
+    <li><a href="recipes/BakedZiti.html">Baked Ziti.</a></li>
 </ul>
 
 
